- обновление и инфа о проге

--- a/src/public/app.html
+++ b/src/public/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Rocket.Chat</title>
+	<title>DK.Chat</title>
 	<link rel="stylesheet" href="../stylesheets/main.css">
 	<script>
 		window.addEventListener('load', () => {
@@ -49,7 +49,7 @@
 				</header>
 				<div class="fields">
 					<div class="input-text active">
-						<input type="text" name="host" placeholder="https://open.rocket.chat" dir="auto">
+						<input type="text" name="host" value="http://chat.domkihot.ru:3000" placeholder="http://chat.domkihot.ru:3000" dir="auto">
 					</div>
 				</div>
 
