--- a/src/public/dialogs/update.html
+++ b/src/public/dialogs/update.html
@@ -63,7 +63,7 @@
 <body class="update-page">
 	<div class="update-content">
 		<h1 class="update-title">New Update is Available</h1>
-		<p class="update-message">A new version of the Rocket.Chat Desktop App is available!</p>
+		<p class="update-message">A new version of the DK.Chat Desktop App is available!</p>
 
 		<div class="update-info">
 			<div class="app-version current-version">
@@ -81,7 +81,7 @@
 	<div class="update-actions">
 		<button class="update-skip-action button secondary">Skip This Version</button>
 		<button class="update-remind-action button secondary">Remind Me Later</button>
-		<button class="update-install-action button primary">Install Update</button>
+		<!-- <button class="update-install-action button primary">Install Update</button> -->
 	</div>
 </body>
 </html>
